--- a/index.html
+++ b/index.html
@@ -9,29 +9,32 @@
 
   <!-- CSS stylesheet -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- Font style -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Outfit:wght@400;700&family=Sacramento&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | QR code component</title>
 
 
 <body>
 
-    <!-- Outter div container - ice blue -->
-    <div class="">
-        <!-- Inner div container - white -->
-        <div class="">
+    <!-- div container - ice blue -->
+    <div class="container">
+ 
             <!-- QR code image -->
-            <img class="" src="images/image-qr-code.png\" alt="QR code image">
+            <img class="qr-code-image" src="images/image-qr-code.png" alt="QR code image">
 
             <!-- Text -->
-            <p class="">
-                Improve your front-end skills by building projects.
+            <p class="text1">
+                Improve your front-end skills by building projects
             </p>
 
-            <p class="">
+            <p class="text2">
                 Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
             </p>
 
-        </div>
     </div>
   
 
@@ -39,7 +42,7 @@
   <!-- Footer -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Shastri Singh</a>.
   </div>
 </body>
 </html>
